--- a/FScanner/res/layout/activity_main.xml
+++ b/FScanner/res/layout/activity_main.xml
@@ -35,12 +35,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/show"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            android:orientation="vertical" 
+            android:id="@+id/result_l"
+            >
         </LinearLayout>
     </ScrollView>
 
